--- a/index.html
+++ b/index.html
@@ -1065,71 +1065,75 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   }
 </style>
 
-const mainImageElement = document.getElementById('mainImage');
-const thumbnails = document.querySelectorAll('.thumbnail-container .img-thumbnail');
-const thumbnailContainer = document.querySelector('.thumbnail-container');
+<!-- JavaScript ajustado para rolar o carrossel de thumbnails -->
+<script>
+  const mainImageElement = document.getElementById('mainImage');
+  const thumbnails = document.querySelectorAll('.thumbnail-container .img-thumbnail');
+  const thumbnailContainer = document.querySelector('.thumbnail-container');
 
-// Array completo de todas as imagens principais
-const mainImages = Array.from(thumbnails).map(thumbnail => thumbnail.src);
-let mainImageIndex = 0;
+  // Array completo de todas as imagens principais
+  const mainImages = Array.from(thumbnails).map(thumbnail => thumbnail.src);
+  let mainImageIndex = 0;
 
-// Função para alterar a imagem principal e rolar até o thumbnail correspondente
-function changeMainImage(src, element) {
-  mainImageElement.src = src;
-  thumbnails.forEach(thumb => thumb.classList.remove('selected'));
-  element.classList.add('selected');
-  mainImageIndex = mainImages.indexOf(src); // Atualiza o índice principal
-  scrollToThumbnail(element); // Rola para o thumbnail ativo
-}
+  // Função para alterar a imagem principal e rolar até o thumbnail correspondente
+  function changeMainImage(src, element) {
+    mainImageElement.src = src;
+    thumbnails.forEach(thumb => thumb.classList.remove('selected'));
+    element.classList.add('selected');
+    mainImageIndex = mainImages.indexOf(src); // Atualiza o índice principal
+    scrollToThumbnail(element); // Rola para o thumbnail ativo
+  }
 
-// Funções para setas de navegação da imagem principal
-function prevMainImage() {
-  mainImageIndex = (mainImageIndex - 1 + mainImages.length) % mainImages.length;
-  mainImageElement.src = mainImages[mainImageIndex];
-  const selectedThumbnail = thumbnails[mainImageIndex];
-  highlightThumbnail(mainImages[mainImageIndex]);
-  scrollToThumbnail(selectedThumbnail); // Rola para o thumbnail ativo
-}
+  // Funções para setas de navegação da imagem principal
+  function prevMainImage() {
+    mainImageIndex = (mainImageIndex - 1 + mainImages.length) % mainImages.length;
+    mainImageElement.src = mainImages[mainImageIndex];
+    const selectedThumbnail = thumbnails[mainImageIndex];
+    highlightThumbnail(mainImages[mainImageIndex]);
+    scrollToThumbnail(selectedThumbnail); // Rola para o thumbnail ativo
+  }
 
-function nextMainImage() {
-  mainImageIndex = (mainImageIndex + 1) % mainImages.length;
-  mainImageElement.src = mainImages[mainImageIndex];
-  const selectedThumbnail = thumbnails[mainImageIndex];
-  highlightThumbnail(mainImages[mainImageIndex]);
-  scrollToThumbnail(selectedThumbnail); // Rola para o thumbnail ativo
-}
+  function nextMainImage() {
+    mainImageIndex = (mainImageIndex + 1) % mainImages.length;
+    mainImageElement.src = mainImages[mainImageIndex];
+    const selectedThumbnail = thumbnails[mainImageIndex];
+    highlightThumbnail(mainImages[mainImageIndex]);
+    scrollToThumbnail(selectedThumbnail); // Rola para o thumbnail ativo
+  }
 
-// Destaque do thumbnail correspondente à imagem principal
-function highlightThumbnail(src) {
-  thumbnails.forEach(thumb => thumb.classList.remove('selected'));
-  const thumbnail = Array.from(thumbnails).find(thumb => thumb.src === src);
-  if (thumbnail) thumbnail.classList.add('selected');
-}
+  // Destaque do thumbnail correspondente à imagem principal
+  function highlightThumbnail(src) {
+    thumbnails.forEach(thumb => thumb.classList.remove('selected'));
+    const thumbnail = Array.from(thumbnails).find(thumb => thumb.src === src);
+    if (thumbnail) thumbnail.classList.add('selected');
+  }
 
-// Função para deslizar os thumbnails horizontalmente
-function slideThumbnails(direction) {
-  const scrollAmount = 120; // Controla o movimento de scroll
-  thumbnailContainer.scrollBy({
-    left: direction === 'left' ? -scrollAmount : scrollAmount,
-    behavior: 'smooth'
+  // Função para deslizar os thumbnails horizontalmente
+  function slideThumbnails(direction) {
+    const scrollAmount = 120; // Controla o movimento de scroll
+    thumbnailContainer.scrollBy({
+      left: direction === 'left' ? -scrollAmount : scrollAmount,
+      behavior: 'smooth'
+    });
+  }
+
+  // Função para centralizar o thumbnail ativo na visualização do carrossel
+  function scrollToThumbnail(element) {
+    const thumbnailContainerRect = thumbnailContainer.getBoundingClientRect();
+    const elementRect = element.getBoundingClientRect();
+    const offset = elementRect.left - thumbnailContainerRect.left - (thumbnailContainerRect.width / 2) + (elementRect.width / 2);
+    thumbnailContainer.scrollBy({
+      left: offset,
+      behavior: 'smooth'
+    });
+  }
+
+  // Adiciona evento de clique em cada thumbnail para atualização da imagem principal
+  thumbnails.forEach(thumb => {
+    thumb.addEventListener('click', () => changeMainImage(thumb.src, thumb));
   });
-}
+</script>
 
-// Função para centralizar o thumbnail ativo na visualização do carrossel
-function scrollToThumbnail(element) {
-  const thumbnailContainerRect = thumbnailContainer.getBoundingClientRect();
-  const elementRect = element.getBoundingClientRect();
-  const offset = elementRect.left - thumbnailContainerRect.left - (thumbnailContainerRect.width / 2) + (elementRect.width / 2);
-  thumbnailContainer.scrollBy({
-    left: offset,
-    behavior: 'smooth'
-  });
-}
-
-// Adiciona evento de clique em cada thumbnail para atualização da imagem principal
-thumbnails.forEach(thumb => {
-  thumb.addEventListener('click', () => changeMainImage(thumb.src, thumb));
-});
 
 <!-- Project Modal Dialog 3 -->
 <div id="project3" class="container zoom-anim-dialog mfp-hide">
