--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="social-list hidden-xs">
         <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
         <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+        <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
       </div>
 
       <!-- Spacer -->
