--- a/index.html
+++ b/index.html
@@ -1507,9 +1507,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="flex-item">
           <div class="social-list pull-sm-right">
-            <a href="" class="icon ion-social-instagram"></a>
-            <a href="" class="icon ion-social-linkedin"></a>
-            <a href="" class="icon ion-social-link"></a>
+        <a href="https://www.linkedin.com/company/skan-hous/" class="icon ion-social-linkedin"></a>
+        <a href="https://www.instagram.com/skanhous" class="icon ion-social-instagram"></a>
+        <a href="https://www.facebook.com/skanhous" class="icon ion-social-facebook"></a>
           </div>
         </div>
         <div class="flex-item">
