--- a/itu.html
+++ b/itu.html
@@ -163,7 +163,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li data-transition="fade" data-slotamount="7" data-masterspeed="1000" data-fsmasterspeed="1000">
 
               <!-- Main image-->
-              <img src="images/slider/slide1.jpg" data-bgparallax="5"  alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+              <img src="images/projects/1-960x540.jpg" data-bgparallax="5"  alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
               <!-- Layer 1 -->
               <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" 
@@ -306,290 +306,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li data-transition="fade" data-slotamount="7" data-masterspeed="1000" data-fsmasterspeed="1000">
 
               <!-- Main image-->
-              <img src="images/slider/slide2.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+              <img src="images/projects/2-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
-              <!-- Layer 1 -->
-              <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" 
-                data-x="['left']" data-hoffset="['100']" 
-                data-y="['middle','middle','middle','middle']" data-voffset="['-250']" 
-                data-width="270"
-                data-height="5"
-                data-whitespace="nowrap"
-                data-type="shape" 
-                data-responsive_offset="on" 
-                data-frames='[{"from":"x:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;","speed":1000,"to":"o:1;","delay":0,"ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
-                data-textAlign="['left','left','left','left']"
-                data-paddingtop="[0,0,0,0]"
-                data-paddingright="[0,0,0,0]"
-                data-paddingbottom="[0,0,0,0]"
-                data-paddingleft="[0,0,0,0]"
-
-                style="background-color:#ffce04;"> </div>
-
-              <!-- Layer 2 -->
-              <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" 
-                data-x="['left']" data-hoffset="['370']" 
-                data-y="['middle','middle','middle','middle']" data-voffset="['19']" 
-                data-width="5"
-                data-height="544"
-                data-whitespace="nowrap"
-                data-type="shape" 
-                data-responsive_offset="on" 
-                data-frames='[{"from":"y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;","speed":1000,"to":"o:1;","delay":600,"ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
-                data-textAlign="['left','left','left','left']"
-                data-paddingtop="[0,0,0,0]"
-                data-paddingright="[0,0,0,0]"
-                data-paddingbottom="[0,0,0,0]"
-                data-paddingleft="[0,0,0,0]"
-                style="background-color:#ffce04;"> </div>
-
-
-              <!-- Layer 3 -->
-              <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" 
-                data-x="['left']" data-hoffset="['100']" 
-                data-y="['middle','middle','middle','middle']" data-voffset="['289']" 
-                data-width="270"
-                data-height="5"
-                data-whitespace="nowrap"
-                data-type="shape" 
-                data-responsive_offset="on" 
-                data-frames='[{"from":"x:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;","speed":1000,"to":"o:1;","delay":1200,"ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
-                data-textAlign="['left','left','left','left']"
-                data-paddingtop="[0,0,0,0]"
-                data-paddingright="[0,0,0,0]"
-                data-paddingbottom="[0,0,0,0]"
-                data-paddingleft="[0,0,0,0]"
-
-                style="background-color:#ffce04;"> </div>
-
-
-              <!-- Layer 4 -->
-              <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" 
-                data-x="['left']" data-hoffset="['100']" 
-                data-y="['middle','middle','middle','middle']" data-voffset="['19']" 
-                data-width="5"
-                data-height="544"
-                data-whitespace="nowrap"
-                data-type="shape" 
-                data-responsive_offset="on" 
-                data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;","speed":1000,"to":"o:1;","delay":1800,"ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
-                data-textAlign="['left','left','left','left']"
-                data-paddingtop="[0,0,0,0]"
-                data-paddingright="[0,0,0,0]"
-                data-paddingbottom="[0,0,0,0]"
-                data-paddingleft="[0,0,0,0]"
-                style="background-color:#ffce04;"> </div>
-
-              <!-- Layer 5 -->
-              <div class="slider-title tp-caption tp-resizeme" 
-                data-x="['left']" data-hoffset="['156']"  
-                data-y="['middle','middle','middle','middle']" data-voffset="['-30']"
-                data-textAlign="['left']"
-                data-fontsize="['72', '63','57','50']"
-                data-lineheight="['72','68', '62','54']"
-                data-height="none"
-                data-whitespace="nowrap"
-                data-transform_idle="o:1;"
-                data-transform_in="x:[-155%];z:0;rX:0deg;rY:0deg;rZ:0deg;sX:1;sY:1;skX:0;skY:0;s:2000;e:Power2.easeInOut;" 
-                data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
-                data-mask_in="x:50px;y:0px;s:inherit;e:inherit;" 
-                data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
-                data-start="500" 
-                data-splitin="chars" 
-                data-splitout="none" 
-                data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">A sofisticação da<br> Madeira Engenheirada<br> FPoles
-              </div>
-
-
-              <!-- Layer 6 -->
-              <div class="slider-title tp-caption" 
-                data-x="['left']" data-hoffset="['156']"  
-                data-y="['middle','middle','middle','middle']" data-voffset="['-170']"
-                data-textAlign="['left']"
-                data-fontsize="['18']"
-                data-lineheight="['20']"
-                data-height="none"
-                data-whitespace="nowrap"
-                data-transform_idle="o:1;"
-                data-transform_in="x:[155%];z:0;rX:0deg;rY:0deg;rZ:0deg;sX:1;sY:1;skX:0;skY:0;s:2000;e:Power2.easeInOut;" 
-                data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
-                data-mask_in="x:50px;y:0px;s:inherit;e:inherit;" 
-                data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
-                data-start="1000" 
-                data-splitin="chars" 
-                data-splitout="none" 
-                data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:0.1em; text-transform:uppercase;">Woodframe
-              </div>
-
-              <!-- Layer 7 -->
-              <div class="slider-title tp-caption" 
-                data-x="['left']" data-hoffset="['156']"  
-                data-y="['middle','middle','middle','middle']" data-voffset="['230']"
-                data-textAlign="['left']"
-                data-fontsize="['18']"
-                data-lineheight="['20']"
-                data-height="none"
-                data-whitespace="nowrap"
-                data-transform_idle="o:1;"
-                data-transform_in="x:[-105%];z:0;rX:0deg;rY:0deg;rZ:0deg;sX:1;sY:1;skX:0;skY:0;s:2000;e:Power2.easeInOut;" 
-                data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
-                data-mask_in="x:50px;y:0px;s:inherit;e:inherit;" 
-                data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
-                data-start="1500" 
-                data-splitin="none" 
-                data-splitout="none" 
-                data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600;">
-                  <a href="#project2" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
-                </a>
-              </div>
-            </li>
-
+            
             <!-- Slide 3 -->
             <li data-transition="fade" data-slotamount="7" data-masterspeed="1000" data-fsmasterspeed="1000">
 
               <!-- Main image-->
-              <img src="images/slider/slide3.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
-
-              <!-- Layer 1 -->
-              <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" 
-                data-x="['left']" data-hoffset="['100']" 
-                data-y="['middle','middle','middle','middle']" data-voffset="['-250']" 
-                data-width="270"
-                data-height="5"
-                data-whitespace="nowrap"
-                data-type="shape" 
-                data-responsive_offset="on" 
-                data-frames='[{"from":"x:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;","speed":1000,"to":"o:1;","delay":0,"ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
-                data-textAlign="['left','left','left','left']"
-                data-paddingtop="[0,0,0,0]"
-                data-paddingright="[0,0,0,0]"
-                data-paddingbottom="[0,0,0,0]"
-                data-paddingleft="[0,0,0,0]"
-
-                style="background-color:#ffce04;"> </div>
-
-              <!-- Layer 2 -->
-              <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" 
-                data-x="['left']" data-hoffset="['370']" 
-                data-y="['middle','middle','middle','middle']" data-voffset="['19']" 
-                data-width="5"
-                data-height="544"
-                data-whitespace="nowrap"
-                data-type="shape" 
-                data-responsive_offset="on" 
-                data-frames='[{"from":"y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;","speed":1000,"to":"o:1;","delay":600,"ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
-                data-textAlign="['left','left','left','left']"
-                data-paddingtop="[0,0,0,0]"
-                data-paddingright="[0,0,0,0]"
-                data-paddingbottom="[0,0,0,0]"
-                data-paddingleft="[0,0,0,0]"
-                style="background-color:#ffce04;"> </div>
-
-
-              <!-- Layer 3 -->
-              <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" 
-                data-x="['left']" data-hoffset="['100']" 
-                data-y="['middle','middle','middle','middle']" data-voffset="['289']" 
-                data-width="270"
-                data-height="5"
-                data-whitespace="nowrap"
-                data-type="shape" 
-                data-responsive_offset="on" 
-                data-frames='[{"from":"x:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;","speed":1000,"to":"o:1;","delay":1200,"ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
-                data-textAlign="['left','left','left','left']"
-                data-paddingtop="[0,0,0,0]"
-                data-paddingright="[0,0,0,0]"
-                data-paddingbottom="[0,0,0,0]"
-                data-paddingleft="[0,0,0,0]"
-
-                style="background-color:#ffce04;"> </div>
-
-
-              <!-- Layer 4 -->
-              <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" 
-                data-x="['left']" data-hoffset="['100']" 
-                data-y="['middle','middle','middle','middle']" data-voffset="['19']" 
-                data-width="5"
-                data-height="544"
-                data-whitespace="nowrap"
-                data-type="shape" 
-                data-responsive_offset="on" 
-                data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;","speed":1000,"to":"o:1;","delay":1800,"ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
-                data-textAlign="['left','left','left','left']"
-                data-paddingtop="[0,0,0,0]"
-                data-paddingright="[0,0,0,0]"
-                data-paddingbottom="[0,0,0,0]"
-                data-paddingleft="[0,0,0,0]"
-                style="background-color:#ffce04;"> </div>
-
-              <!-- Layer 5 -->
-              <div class="slider-title tp-caption tp-resizeme" 
-                data-x="['left']" data-hoffset="['156']"  
-                data-y="['middle','middle','middle','middle']" data-voffset="['-30']"
-                data-textAlign="['left']"
-                data-fontsize="['72', '63','57','50']"
-                data-lineheight="['72','68', '62','54']"
-                data-height="none"
-                data-whitespace="nowrap"
-                data-transform_idle="o:1;"
-                data-transform_in="x:[-155%];z:0;rX:0deg;rY:0deg;rZ:0deg;sX:1;sY:1;skX:0;skY:0;s:2000;e:Power2.easeInOut;" 
-                data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
-                data-mask_in="x:50px;y:0px;s:inherit;e:inherit;" 
-                data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
-                data-start="500" 
-                data-splitin="chars" 
-                data-splitout="none" 
-                data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:-0.05em;">Skan Hous 2.0<br>Praticidade, Velocidade e <br>Qualidade
-              </div>
-
-
-              <!-- Layer 6 -->
-              <div class="slider-title tp-caption" 
-                data-x="['left']" data-hoffset="['156']"  
-                data-y="['middle','middle','middle','middle']" data-voffset="['-170']"
-                data-textAlign="['left']"
-                data-fontsize="['18']"
-                data-lineheight="['20']"
-                data-height="none"
-                data-whitespace="nowrap"
-                data-transform_idle="o:1;"
-                data-transform_in="x:[155%];z:0;rX:0deg;rY:0deg;rZ:0deg;sX:1;sY:1;skX:0;skY:0;s:2000;e:Power2.easeInOut;" 
-                data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
-                data-mask_in="x:50px;y:0px;s:inherit;e:inherit;" 
-                data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
-                data-start="1000" 
-                data-splitin="chars" 
-                data-splitout="none" 
-                data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; letter-spacing:0.1em; text-transform:uppercase;">Residencial
-              </div>
-
-              <!-- Layer 7 -->
-              <div class="slider-title tp-caption" 
-                data-x="['left']" data-hoffset="['156']"  
-                data-y="['middle','middle','middle','middle']" data-voffset="['230']"
-                data-textAlign="['left']"
-                data-fontsize="['18']"
-                data-lineheight="['20']"
-                data-height="none"
-                data-whitespace="nowrap"
-                data-transform_idle="o:1;"
-                data-transform_in="x:[-105%];z:0;rX:0deg;rY:0deg;rZ:0deg;sX:1;sY:1;skX:0;skY:0;s:2000;e:Power2.easeInOut;" 
-                data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
-                data-mask_in="x:50px;y:0px;s:inherit;e:inherit;" 
-                data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
-                data-start="1500" 
-                data-splitin="none" 
-                data-splitout="none" 
-                data-responsive_offset="on" 
-                data-elementdelay="0.05" style="font-weight:600; ">
-                  <a href="#project3" class="popup-with-zoom-anim link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-thin-right"></i>
-                </a>
-              </div>
+              <img src="images/projects/3-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
             </li>
           </ul>
         </div>
