--- a/itu.html
+++ b/itu.html
@@ -314,6 +314,37 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
               <!-- Main image-->
               <img src="images/projects/3-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+
+            <!-- Slide 4 -->
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="300" data-fsmasterspeed="300">
+
+              <!-- Main image-->
+              <img src="images/projects/3-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+
+            <!-- Slide 5 -->
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="300" data-fsmasterspeed="300">
+
+              <!-- Main image-->
+              <img src="images/projects/4-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+
+            <!-- Slide 6 -->
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="300" data-fsmasterspeed="300">
+
+              <!-- Main image-->
+              <img src="images/projects/5-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+
+            <!-- Slide 7 -->
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="300" data-fsmasterspeed="300">
+
+              <!-- Main image-->
+              <img src="images/projects/6-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+
+            <!-- Slide 8 -->
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="300" data-fsmasterspeed="300">
+
+              <!-- Main image-->
+              <img src="images/projects/7-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+
             </li>
           </ul>
         </div>
