--- a/itu.html
+++ b/itu.html
@@ -306,7 +306,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <!-- Main image-->
               <img src="images/projects/2-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
-            
             <!-- Slide 3 -->
             <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
 
@@ -342,6 +341,48 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
               <!-- Main image-->
               <img src="images/projects/8-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+
+            <!-- Slide 9 -->
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+
+              <!-- Main image-->
+              <img src="images/projects/9-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+
+            <!-- Slide 10 -->
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+
+              <!-- Main image-->
+              <img src="images/projects/10-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+
+            <!-- Slide 11 -->
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+
+              <!-- Main image-->
+              <img src="images/projects/11-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+
+            <!-- Slide 12 -->
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+
+              <!-- Main image-->
+              <img src="images/projects/12-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+
+            <!-- Slide 13 -->
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+
+              <!-- Main image-->
+              <img src="images/projects/13-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+
+            <!-- Slide 14 -->
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+
+              <!-- Main image-->
+              <img src="images/projects/14-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
+
+            <!-- Slide 15 -->
+            <li data-transition="fade" data-slotamount="7" data-masterspeed="150" data-fsmasterspeed="150">
+
+              <!-- Main image-->
+              <img src="images/projects/15-960x540.jpg"  data-bgparallax="5" alt="" data-bgposition="center 0" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg">
 
             </li>
           </ul>
